<resources>
    <string name="app_name">Vocabulary</string>
    <string name="dictionary">Dictionary</string>
    <string name="add">Lug\'at qo\'shish</string>
    <string name="begin">Tetsni boshlash</string>
    <string name="began">Arxiv bo\'yicha testni boshlash</string>
    <string name="history">Arxiv</string>
    <string name="english">Inglizcha</string>
    <string name="uzb">O\'zbekcha</string>
    <string name="next">Keyingi</string>
    <string name="pervious">Oldingi</string>
</resources>