<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activities.AddActivity">

    <EditText
        android:id="@+id/englishEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="15dp"
        android:background="@drawable/shape_rect"
        android:inputType="textCapWords"
        android:hint="@string/english"
        android:autofillHints="@string/english" />

    <EditText
        android:id="@+id/uzbEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="15dp"
        android:background="@drawable/shape_rect"
        android:inputType="textCapWords"
        android:hint="@string/uzb"
        android:autofillHints="@string/uzb" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/add"/>

</LinearLayout>