<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/bg"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textColor="#fff"
        android:textSize="30sp"
        android:text="@string/dictionary"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_margin="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/addCard"
            android:onClick="onClickCard"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:minHeight="200dp"
            style="@style/CardView.Light"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:padding="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_task"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="casual"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/add"
                    android:gravity="center_horizontal" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="onClickCard"
            android:id="@+id/cardBegin"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_width="0dp"
            style="@style/CardView.Light"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:padding="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_begin"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="casual"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/begin"
                    android:gravity="center_horizontal" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="onClickCard"
            android:id="@+id/cardBegan"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_width="0dp"
            style="@style/CardView.Light"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            android:padding="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_begin"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="casual"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/began"
                    android:gravity="center_horizontal" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardHistory"
            android:onClick="onClickCard"
            android:layout_height="wrap_content"
            style="@style/CardView.Light"
            android:minHeight="200dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_history"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="casual"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/history"
                    android:gravity="center_horizontal" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>